# v3_watchdog

./: .dockerignore  .env.example  .gitignore  .secret_key  BusinessRuleRegistry.yaml  CHANGELOG.md  CONSOLIDATION_PLAN.md  CONTRIBUTING.md  Dockerfile  MODULE_CONSOLIDATION.md  README.md  agentops-integration-plan.md  apply_fixes.sh  demo_schema_processor.py  docker-compose.yml  executive-insight-accuracy-plan.md  implementation_overview.md  improvement-plan.md  psutil.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  run_app.py  run_app.sh  schema-validation-plan.md  setup.py  smoke_test.py  test_agents.py  ui-enhancement-plan.md  verify_column_mapping.py  web_lead_analyst.md
.github/workflows/: ci.yml  test.yml
archive/old-tests/: test_app_enhanced.py  test_end_to_end_enhanced.py  test_insight_conversation_enhanced.py
archive/old-versions/: app_enhanced.py  chat_interface_enhanced.py  insight_card_improved.py  insight_conversation_enhanced.py  insight_conversation_new.py  insight_flow_enhanced.py
config/: insight_quality.yml  normalization_rules.yml  recommendations.yml
config/env/: .env.template  requirements-core.txt  requirements-dev.txt  requirements-nova-act.txt  requirements-optional.txt  requirements.txt
config/schema_profiles/: general_manager.json
config/scripts/: run.sh  run_app.sh
config/testing/: pytest.ini
data/: .encryption_key
docs/: ADAPTIVE_SCHEMA.md  CB2_TESTING_README.md  PHASE1_PROGRESS.md  ROADMAP.md  agent_sandbox.md  agent_sandbox_implementation_summary.md  api.md  ci.md  cleanup_report.md  codebase_migration_log.md  dependency_graph.txt  deployment.md  dev2_implementation_summary.md  dev_notes.md  digest_system.md  executive_summary.md  fallback_renderer.md  fallback_renderer_monitoring.md  fallback_renderer_pr_checklist.md  infra.md  ingestion_pipeline.md  insights.md  insights_configuration.md  manual_testing_guide.md  manual_testing_results.md  mobile_ui_enhancements.md  module_inventory.json  nova_act_test_plan.md  onboarding.md  phase2.md  prompt_versions.md  redis_cache_implementation.md  validation_ideas.md  validator_cleanup_summary.md
docs/archive/: BUGFIX_README.md  NOVA_ACT_IMPLEMENTATION.md  PHASE1_PROGRESS.md  css_audit_report.md  f_i_specialist.md  general_advisor.md  insight-delivery-plan.md  insight-engine-prototype-plan.md  insight-improvement-plan.md  insight-pipeline-fix.md  llm-intent-system-plan.md  mapping-feedback-plan.md  performance_summary.md  phase_0_completion_report.md  predictive-forecast-plan.md  prompt-tuning-plan.md  pyarrow-serialization-fix.md  schema-profile-editor-plan.md  simplification-plan.md  user_feedback_summary.md
docs/core/: DEVELOPMENT.md  schema-aware-query-processing.md
docs/deployment/: deployment_instructions.md  nova_act_installation_sprint.md  staging_deployment_report.md
docs/features/: LEAD_FLOW_README.md  LEAD_PREDICTION_README.md  NOTIFICATION_README.md  adaptive-schema-plan.md  adaptive-threshold-plan.md  column_mapping_implementation.md  configuration.md  csv-ingestion-plan.md  insight-engine.md  lead-source-roi-readme.md  playwright-setup.md  theme-toggle.md  visual-regression.md
examples/: README.md  agent_sandbox_example.py  csv_pdf_ingestion_example.py  flag_panel_example.py  ingestion_dashboard.py  insight_validator_example.py  lead_flow_example.py  nova_act_demo.py  validate_business_queries.py
infra/: main.tf  outputs.tf  terraform-plan.sh  variables.tf
legacy/: insight_card_consolidated.py
profiles/: README.md  comprehensive.json  default.json  general_manager.json  general_sales_manager.json  minimal.json
prompt_templates/: insight_prompts.json
schema_adjustments/: test_user_adjustments.json
scripts/: bump_version.py  check_performance.py  create_default_profile.py  list_modules.py  smoke_insights.py  start_nova_act.py  update_imports.py  update_version_badge.py
src/: .secret_key  __init__.py  app.py  audit_log.py  automotive_analyst_prompt.md  celery_app.py  chart_utils.py  data_validation.py  digest_bot.py  digest_system.py  exec_schema_profiles.py  insight_card.py  insight_card_improved.py  insight_conversation.py  insight_conversation_consolidated.py  insight_flow.py  insights_digest.py  insights_integration.py  knowledge.md  llm_engine.py  notification_demo.py  report_scheduler.py  user_management.py
tests/: README.md  __init__.py  conftest.py  nova_act_test.py  run_tests.py  test_adaptive_schema.py  test_app.py  test_app_enhanced.py  test_base.py  test_benchmarking.py  test_business_queries.py  test_conversation_integration.py  test_data_cleaner.py  test_data_io.py  test_data_lineage.py  test_data_parser.py  test_data_upload.py  test_data_validation.py  test_days_to_close_fix.py  test_debug_dashboard.py  test_debug_dashboard_enhanced.py  test_digest_bot.py  test_digest_system.py  test_direct_query_processing.py  test_encryption.py  test_errors.py  test_event_system.py  test_feedback_engine.py  test_file_upload_enhanced.py  test_global_error_handler.py  test_guardrails.py  test_insight_card.py  test_insight_conversation.py  test_insight_delivery.py  test_insight_flow.py  test_insight_templates.py  test_insight_validator.py  test_insights.py  test_insights_baseline.py  test_intent_manager.py  (+28 more)
(+458 files in other folders)
